--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 
     <string name="your_text_reference2"><u>Get started</u></string>
 
+    <string name="your_text_reference3"><u>Home</u></string>
+
 </resources>
