--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="your_text_reference3"><u>Home</u></string>
 
+    <string name="your_text_reference4"><u>Reset search filters</u></string>
+
 </resources>
